[package]
name = "burst-header"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-wasm = "0.1.3"
serde = {version = "1.0.117" , features = ["derive"]}
log = "0.4"
serde_json = "1.0.59"
serde-humanize-rs = "0.1.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
